--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-# $Id: Changes,v 1.143 2004/10/01 01:56:34 petdance Exp $
+# $Id: Changes,v 1.144 2004/10/01 02:16:10 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-1.05_01 XXX
+1.05_01 Thu Sep 30 21:04:44 CDT 2004
+
         [FIXES]
         * set_visible() doesn't stop setting values when it finds a zero.
 
@@ -21,7 +22,8 @@ Revision history for Perl extension WWW::Mechanize
         * t/local/follow.t has new tests to confirm that 'follow*' functions
           work with characters like o-umlaut, even when the o-umlaut is
           encoded in the HTML, but not in the call to follow(). (RT #2416)
-          By Mark Stosberg. 
+          By Mark Stosberg.
+
 
 1.04    Wed Sep 15 23:27:53 CDT 2004
 
@@ -555,7 +557,7 @@ Revision history for Perl extension WWW::Mechanize
         [DOCUMENTATION]
         * The package now includes the WWW::Mechanize logo in the etc/
           directory.  I have no idea what I'll do with it, but thanks
-          to Mengwong for making it!
+          to Meng Wong for making it!
 
 0.43    May 29, 2003
         [ENHANCEMENTS]
