--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.148 2004/10/19 00:30:54 markjugg Exp $
+# $Id: Changes,v 1.149 2004/10/19 03:32:56 markjugg Exp $
 Revision history for Perl extension WWW::Mechanize
 
 XXX
@@ -9,6 +9,7 @@ XXX
 
 	[INTERNALS]
 	* Improve taint-safeness on Perl 5.6.1 (RT#8042, patch by Dominique Quatravaux)
+	* Require URI 1.25, fixing bug which exposed itself in WWW::Mechanize (RT#3048)
 
 1.05_02	Sat Oct  2 16:55:59 CDT 2004
 	[ENHANCEMENTS]
