Improved the regex on the URL for META tags.

--- a/Changes
+++ b/Changes
@@ -1,9 +1,10 @@
-# $Id: Changes,v 1.160 2004/11/04 03:55:02 petdance Exp $
+# $Id: Changes,v 1.161 2004/11/05 02:22:01 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 XXX
         [ENHANCEMENTS]
         * Added WWW::Mechanize::Image object for representing images.
+        * Improved the regex on the URL for META tags.
 
         [FIXES]
         * When parsing urls out of meta refresh tags, "url" may now be 
