Added Jason Gilmore's article

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension WWW::Mechanize
 
+Next
+        [DOCUMENTATION]
+        * More samples in the FAQ
+
 1.08    Fri Dec 24 01:01:06 CST 2004
         [ENHANCEMENTS]
         * Added find_image() and find_all_images().
