Another FAQ entry, this one from Joshua Gatcomb

--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@ Next
           Offer Kaye and others who sent in patches.
 
         [DOCUMENTATION]
-        * More samples in the FAQ
+        * More samples in the FAQ.  Thanks to Joshua Gatcomb.
 
 1.08    Fri Dec 24 01:01:06 CST 2004
         [ENHANCEMENTS]
