--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension WWW::Mechanize
 
-NEXT
+1.11_01 Mon Feb 14 00:12:48 CST 2005
         [THINGS THAT MAY BREAK YOUR CODE]
         * Removed deprecated _parse_html() method.
 
