Should no longer complain about not deleting a file when destorying LocalServer.pm.

--- a/Changes
+++ b/Changes
@@ -3,7 +3,8 @@ Revision history for Perl extension WWW::Mechanize
 NEXT
         [FIXES]
         * Fixed RT #9026: hang in t/local/back.t under Windows XP.
-          Thanks Andrew Savige.
+          Thanks Andrew Savige.  It also should no longer complain
+          about being unable to clean up a temp file.
 
 1.11_01 Mon Feb 14 00:12:48 CST 2005
         [THINGS THAT MAY BREAK YOUR CODE]
