--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension WWW::Mechanize
 
-NEXT
+1.13_01 Tue Apr 12 14:11:18 CDT 2005
+        [ENHANCEMENTS]
+        * Now dies if you call submit_form() with a non-existsing
+          form_number or form_name.  Before, it would just warn.
+
         [DOCUMENTATION]
         * Added an example of using credentials() in the cookbook.
 
