--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension WWW::Mechanize
 
+NEXT
+        [DOCUMENTATION]
+        * Added lots of new FAQs.  Thanks to Peter Stevens.
+
 1.13_01 Tue Apr 12 14:11:18 CDT 2005
         [ENHANCEMENTS]
         * Now dies if you call submit_form() with a non-existsing
