--- a/lib/WWW/Mechanize/FAQ.pod
+++ b/lib/WWW/Mechanize/FAQ.pod
@@ -314,8 +314,16 @@ times, this is not a problem, but a Perl script can outrun the server.
 So try adding a sleep(5) between logging in and actually doing anything
 (the optimal delay must be determined experimentally).
 
+=head2 Mech is a big memory pig!  I'm running out of RAM!
+
+Mech keeps a history of every page, and the state it was in.  It actually
+keeps a clone of the full Mech object at every step along the way.
+
+You can limit this stack size with the C<stack_depth> parm in the C<new()>
+constructor.
+
 =head1 AUTHOR
 
-Copyright 2005 Andy Lester C<< <andy@petdance.com> >>
+Copyright 2005 Andy Lester C<< <andy at petdance.com> >>
 
 =cut
