--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension WWW::Mechanize
 
-NEXT
+1.17_01 Thu Jan 12 14:50:07 CST 2006
         [FIXES]
         * Fixed some failures in tests.  Non-existent URLs now have a
           "." postpended to them, so if someone's got a search domain
