--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension WWW::Mechanize
 
-NEXT
+1.18    Thu Feb  2 00:11:26 CST 2006
         [TESTS]
         * Makefile.PL now takes four new parms:
             * --live/nolive turns on/off the live tests
@@ -8,17 +8,12 @@ NEXT
             * --mech-dump/nomech-dump installs/doesn't the mech-dump program
             * --all turns on all tests and installs mech-dump
 
-1.17_01 Thu Jan 12 14:50:07 CST 2006
-        [FIXES]
         * Fixed some failures in tests.  Non-existent URLs now have a
           "." postpended to them, so if someone's got a search domain
           with a wildcard (i.e. ignore.us) it'll ignore that.  Also,
           Google's second link is now a https:// link, which some Mechs
           can't handle.  Added a 'url_regex' which now makes it look at
           the second non-https link.  Thanks to Pete Krawczyk.
-
-        * Makefile.PL lied when it referred to the --skiplive switch,
-          which is really the --nolive switch.
 
 1.16    Fri Oct 28 17:34:20 CDT 2005
         [ENHANCEMENTS]
