* Fix Taint-mode warnings with Perl 5.6.1 (RT#16945)

--- a/Changes
+++ b/Changes
@@ -1,14 +1,12 @@
 Revision history for Perl extension WWW::Mechanize
 
 NEXT
-        [INTERNALS]
-        * Various little cleanup things from Perl::Critic.
-
         [DOCUMENTATION]
         * Fixed a misleading parm in the constructor.
 
         [INTERNALS]
         * Made lots of little cleanups based on Perl::Critic
+        * Fix Taint-mode warnings with Perl 5.6.1 (RT#16945)
 
 1.18    Thu Feb  2 00:11:26 CST 2006
         [TESTS]
