Really fix uri().
What uri() returns has never been properly documented until now. 
Even Andy was confused, thinking it returned a URI object when 
it has (lately) been returning a string. 

In Mech 1.04, it sometimes returned a string and sometimes a URI object,
depending on when you called uri(). 

Sometime after that, it was changed to always return a regular string, 
and about 20 nearly identical (!!) tests were added to the test suite to
insure this was always case. 

Unfortunately, the /wrong/ URI was being returned after a redirect, causing
three bugs to be filed about the issue, and the superior solution was
overlooked: a URI object can returned which happens to stringify to a string. 

So we get the best of both worlds and backwards compatibility.

--- a/Changes
+++ b/Changes
@@ -4,8 +4,13 @@ NEXT
         [BUG FIXES] 
         * The behavior of clone() now copies over the cookie jar,
           which is probably what you expected it did in the first place.  This
-          fixes bug RT##13541 filed against Test::WWW::Mechanize, which was using
+          fixes bug RT#13541 filed against Test::WWW::Mechanize, which was using
           clone() internally. (Mark Stosberg)
+
+        * The correct URL is returned after redirecting. This a regression from 1.04
+          and was reported as RT#9059, RT#12882, and RT#12786.  The documentation 
+          about this has also been clarified that we return A URI object, but that
+          it stringifies to the URI itself. 
 
         [DOCUMENTATION]
         * Fixed a misleading parm in the constructor.
